# hackernews-scraper

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_SYSTEM.md  Dockerfile  PRD.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_top_comment.py
app/: worker.py
app/activities/: __init__.py  browser.py  persistence.py
app/api/: dependencies.py  main.py  models.py
app/api/routers/: __init__.py  runs.py  scrape.py  stories.py
app/config/: constants.py
app/domain/: __init__.py  exceptions.py  models.py
app/infra/: db.py  repositories.py  tables.py
app/workflows/: __init__.py  scraper.py
tests/: conftest.py
tests/activities/: test_browser.py  test_persistence.py
tests/unit/: test_domain_models.py  test_exceptions.py
tests/workflows/: test_scraper_workflow.py
